test/cases/parser/IfStatement2.errors
src/IfStatement2.b:6:7: Syntax error (expected statement)
