test/cases/parser/IfStatement2.b
module IfStatement2
interface {
  function f()
  {
    if (true) {
      XXX
    }
  }
}
